--- a/package.json
+++ b/package.json
@@ -19,31 +19,36 @@
     "backend:cypress:seed": "copy-files-from-to --config ./backend/cypress/copy-db-cypress.json"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
-    "vee-validate": "^4.12.6"
+    "pinia": "^2.1.7",
+    "vee-validate": "^4.12.6",
+    "vue": "^3.4.21",
+    "vue-loading-overlay": "^6.0.4",
+    "vue-router": "^4.3.0",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.7",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
+    "@vee-validate/rules": "^4.12.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
-    "@popperjs/core": "^2.11.7",
-    "@vee-validate/rules": "^4.12.6",
+    "copy-files-from-to": "^3.8.0",
     "cypress": "^13.7.2",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.0.0",
+    "json-server": "^0.17.3",
+    "json-server-auth": "^2.1.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "start-server-and-test": "^2.0.3",
@@ -51,9 +56,6 @@
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.11",
-    "copy-files-from-to": "^3.8.0",
-    "json-server": "^0.17.3",
-    "json-server-auth": "^2.1.0"
+    "vue-tsc": "^2.0.11"
   }
 }
