--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.1.7",
@@ -33,6 +34,7 @@
     "@popperjs/core": "^2.11.7",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
     "@vee-validate/rules": "^4.12.6",
